--- a/WEB4U/w4uhtmles.html
+++ b/WEB4U/w4uhtmles.html
@@ -131,7 +131,7 @@ footer {
 &lt;h1&gt;Bienvenido a mi página&lt;/h1&gt;
 &lt;h2&gt;Sobre mí&lt;/h2&gt;
     </code></pre>
-
+ <img src="IMAGES/html1español.png" style="border: 5px solid gray; border-radius: 10px;">
     <p>
       Más información:  
       <a href="https://www.w3schools.com/tags/tag_hn.asp" target="_blank" title="Abrir documentación W3Schools">
@@ -151,7 +151,7 @@ footer {
   Ir a Google
 &lt;/a&gt;
     </code></pre>
-
+ <img src="IMAGES/html2español.png" style="border: 5px solid gray; border-radius: 10px;">
     <p>
       Más información:  
       <a href="https://www.w3schools.com/tags/tag_a.asp" target="_blank">
@@ -169,7 +169,7 @@ footer {
     <pre><code>
 &lt;img src="imagenes/logo.png" alt="Logo de ejemplo" width="200"&gt;
     </code></pre>
-
+ <img src="IMAGES/html3.png" style="border: 5px solid gray; border-radius: 10px;">
     <p>
       Más información:  
       <a href="https://www.w3schools.com/tags/tag_img.asp" target="_blank">
@@ -195,7 +195,7 @@ footer {
   &lt;input type="submit" value="Enviar"&gt;
 &lt;/form&gt;
     </code></pre>
-
+ <img src="IMAGES/html4español.png" style="border: 5px solid gray; border-radius: 10px;">
     <p>
       Más información:  
       <a href="https://www.w3schools.com/html/html_forms.asp" target="_blank">
@@ -222,7 +222,7 @@ footer {
   &lt;/tr&gt;
 &lt;/table&gt;
     </code></pre>
-
+ <img src="IMAGES/html5español.png" style="border: 5px solid gray; border-radius: 10px;">
     <p>
       Más información:
       <a href="https://www.w3schools.com/html/html_tables.asp" target="_blank">
