--- a/WEB4U/w4uindexes.html
+++ b/WEB4U/w4uindexes.html
@@ -49,7 +49,7 @@ nav a:hover {
   color: #00a8cc;
 }
 
-article {
+div {
   float: left;
   padding: 20px;
   width: 75%;
@@ -114,7 +114,7 @@ footer {
 <section>
 
   
-  <article>
+  <div>
     <h1>Introducción a los Lenguajes de Marcas</h1>
     <p>
       Los lenguajes de marcas se utilizan para estructurar, organizar y presentar contenido en la web. 
@@ -147,7 +147,7 @@ footer {
       Haz clic en cualquier logo para ir a la guía correspondiente y aprender más sobre cada lenguaje de marcas.
     </p>
 
-  </article>
+  </div>
 </section>
 
 <footer>
