--- a/WEB4U/w4uindexes.html
+++ b/WEB4U/w4uindexes.html
@@ -156,6 +156,10 @@ footer {
        Inglés
       </a>
     </p>
+   <p><a href="PDFS/pdfindexespañol.pdf" style="color: red;">
+       PDF
+      </a>
+    </p>
 </footer>
 </body>
 </html>
