--- a/WEB4U/w4uindexeng.html
+++ b/WEB4U/w4uindexeng.html
@@ -155,6 +155,10 @@ footer {
        Spanish
       </a>
     </p>
+    <p><a href="PDFS/pdfindexingles.pdf" style="color: red;">
+       PDF
+      </a>
+    </p>
 </footer>
 
 </body>
