--- a/WEB4U/w4uhtmles.html
+++ b/WEB4U/w4uhtmles.html
@@ -239,6 +239,10 @@ footer {
        Inglés
       </a>
     </p>
+    <p><a href="PDFS/pdfhtmlespañol.pdf" style="color: red;">
+       PDF
+      </a>
+    </p>
 </footer>
 
 </body>
