--- a/WEB4U/w4uhtmleng.html
+++ b/WEB4U/w4uhtmleng.html
@@ -449,7 +449,10 @@ footer {
       </a>
 
     </p>
-
+  <p><a href="PDFS/pdfhtmlingles.pdf" style="color: red;">
+       PDF
+      </a>
+    </p>
 </footer>
 
 
