--- a/WEB4U/w4ucsseng.html
+++ b/WEB4U/w4ucsseng.html
@@ -233,6 +233,10 @@ div {
 <footer>
   <p>Web4U. José Manuel Moreno Raya.</p>
   <p><a href="w4ucsses.html" style="color: yellow;">Spanish</a></p>
+    <p><a href="PDFS/pdfcssingles.pdf" style="color: red;">
+       PDF
+      </a>
+    </p>
 </footer>
 
 </body>
