--- a/WEB4U/w4ucsses.html
+++ b/WEB4U/w4ucsses.html
@@ -237,6 +237,10 @@ div {
        Inglés
       </a>
     </p>
+    <p><a href="PDFS/pdfcssespañol.pdf" style="color: red;">
+       PDF
+      </a>
+    </p>
 </footer>
 
 </body>
