--- a/WEB4U/w4usvges.html
+++ b/WEB4U/w4usvges.html
@@ -235,6 +235,10 @@ footer {
        Inglés
       </a>
     </p>
+            <p><a href="PDFS/pdfsvgespañol.pdf" style="color: red;">
+       PDF
+      </a>
+    </p>
 </footer>
 
 </body>
