--- a/WEB4U/w4usvgeng.html
+++ b/WEB4U/w4usvgeng.html
@@ -227,6 +227,10 @@ footer {
 <footer>
   <p>Web4U. José Manuel Moreno Raya.</p>
   <p><a href="w4usvges.html" style="color: yellow;">Spanish</a></p>
+    <p><a href="PDFS/pdfsvgingles.pdf" style="color: red;">
+       PDF
+      </a>
+    </p>
 </footer>
 
 </body>
