--- a/TEMA2/ejercicio4css.html
+++ b/TEMA2/ejercicio4css.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+   y al mismo tiempo podamos controlar su padding/margin.
+
+.horizontal-menu {
+
+  background-color: #333; 
+  
+}
+
+
+.horizontal-menu a {
+  background-color: #eee; /
+  color: black;         
+  display: inline-block; /
+  padding: 12px;
+  text-decoration: none;
+  text-align: center;   
+}
+
+
+.horizontal-menu a:hover {
+  background-color: #333; 
+  color: white;         
+}
+
+
+.horizontal-menu a.active {
+  background-color: #04AA6D; 
+  color: white;
+}
+</style>
+</head>
+<body>
+
+<h1>Menú Horizontal</h1>
+
+<div class="horizontal-menu">
+  <a href="#" class="active">Home</a>
+  <a href="#">Link 1</a>
+  <a href="#">Link 2</a>
+  <a href="#">Link 3</a>
+  <a href="#">Link 4</a>
+</div>
+
+</body>
+</html>
 
