--- a/TEMA2/ejercicio4css.html
+++ b/TEMA2/ejercicio4css.html
@@ -12,9 +12,9 @@
 
 
 .horizontal-menu a {
-  background-color: #eee; /
+  background-color: #eee; 
   color: black;         
-  display: inline-block; /
+  display: inline-block; 
   padding: 12px;
   text-decoration: none;
   text-align: center;   
