--- a/TEMA2/EJERCICIO 1/ejercicio1css.html
+++ b/TEMA2/EJERCICIO 1/ejercicio1css.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae - Azamat</title>
-    <link rel="stylesheet" href="MyStyle.CSS">
+    <link rel="stylesheet" href="ejercicio1css.css">
 </head>
 <body>
 
