--- a/TEMA2/EJERCICIO 2/poe.html
+++ b/TEMA2/EJERCICIO 2/poe.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Classic Horror Authors - Edgar Allan Poe</title>
+<link rel="stylesheet" type="text/css" href="poe.css" /> 
 </head>
 
 <body>
@@ -13,11 +14,11 @@ Classic Horror Authors - Edgar Allan Poe
 
 
 <div id="navigation">
-Edgar Allan Poe | Mary Shelley | Bram Stoker
+<a href="poe.html">Edgar Allan Poe</a> | <a href="shelley.html">Mary Shelley</a> | <a href="stoker.html">Bram Stoker</a>
 </div>
 
 <div id="content">
-Edgar Allan Poe: Best known for his poems and short fiction, Edgar Allan Poe, born in Boston, Jan. 19, 1809, died Oct. 7, 1849 in Baltimore, deserves more credit than any other writer for the transformation of the short story from anecdote to art. He virtually created the detective story and perfected the psychological thriller. He also produced some of the most influential literary criticism of his time -- important theoretical statements on poetry and the short story -- and has had a worldwide influence on literature. 
+Edgar Allan Poe: Best known for his poems and short fiction, Edgar Allan Poe, born in Boston, Jan. 19, 1809, died Oct. 7, 1849 in Baltimore, deserves more credit than any other writer for the transformation of the short story from anecdote to art. He virtually created the detective story and perfected the psychological thriller. He also produced some of the most influential literary criticism of his time -- important theoretical statements on poetry and the short story -- and has had a worldwide influence on literature. 
 
 He was born as Edgar Poe in Boston, Massachusetts; his parents died when he was young. Poe was taken in by John and Frances Allan, of Richmond, Virginia, but they never formally adopted him. After spending a short period at the University of Virginia and briefly attempting a military career, Poe parted ways with the Allans. Poe's publishing career began humbly, with an anonymous collection of poems, Tamerlane and Other Poems (1827), credited only to "a Bostonian".</div>
 
@@ -33,7 +34,7 @@ Bon-Bon (1850)
 
 Comments / Suggestions
 
-We want to hear from you! If you have any comments or suggestions on things you'd like to see on the site please let us know.
+We want to hear from you! If you have any comments or suggestions on things you'd like to see on the site please <a href="mailto:tunombre@ejemplo.com">let us know</a>.
 </div>
 
 
