--- a/TEMA3/EJERCICIO 5/ejercicio5js.html
+++ b/TEMA3/EJERCICIO 5/ejercicio5js.html
@@ -11,7 +11,7 @@
   <hr>
 
   <h3>2.Cambiar imagen</h3>
-  <img id="myImg" src="https://via.placeholder.com/150/blue" width="150"><br>
+  <img id="myImg" src="imagen0.png" width="150"><br>
   <button onclick="document.getElementById('myImg').src = 'imagen1.png'">Uno</button>
   <button onclick="document.getElementById('myImg').src = 'imagen2.png'">Dos</button>
   <button onclick="document.getElementById('myImg').src = 'imagen3.png'">Tres</button>
