Create ejercicio2js.html with initial content
Added basic HTML structure for the exercise page.

--- a/TEMA3/EJERCICIO 2/ejercicio2js.html
+++ b/TEMA3/EJERCICIO 2/ejercicio2js.html
@@ -1,1 +1,19 @@
-qqqq
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Ejercicio 2</title>
+    <!-- Vinculamos el archivo JS externo -->
+    <script src="ejercicio2js.js" defer></script>
+</head>
+<body>
+
+<h1>Mi primera página web</h1>
+<p>Mi primer párrafo</p>
+
+<p id="demo"></p>
+
+<!-- Botón que escribirá en el párrafo -->
+<button type="button" onclick="mostrarMensaje()">Mostrar mensaje</button>
+
+</body>
+</html>
