Update script source in ejercicio3js.html

--- a/TEMA3/EJERCICIO 3/ejercicio3js.html
+++ b/TEMA3/EJERCICIO 3/ejercicio3js.html
@@ -4,7 +4,7 @@
     <title>Ejercicio 3</title>
     <link id="estilo1" rel="stylesheet" href="estilo1.css">
     <link id="estilo2" rel="stylesheet" href="estilo2.css" disabled>
-    <script src="js03.js" defer></script>
+    <script src="ejercicio3js.js" defer></script>
 </head>
 <body>
 
