Update image paths for cars and Spiderman

--- a/TEMA3/EJERCICIO 3/ejercicio3js.html
+++ b/TEMA3/EJERCICIO 3/ejercicio3js.html
@@ -12,13 +12,13 @@
 <p>Selecciona un coche del desplegable:</p>
 
 <select id="selectCoche" onchange="cambiaCoche(this.value)">
-    <option value="IMAGENES/coche1.jpg">Coche 1</option>
-    <option value="IMAGENES/coche2.jpg">Coche 2</option>
-    <option value="IMAGENES/coche3.jpg">Coche 3</option>
+    <option value="coche1.jpg">Coche 1</option>
+    <option value="coche2.jpg">Coche 2</option>
+    <option value="coche3.jpg">Coche 3</option>
 </select>
 
 <br><br>
-<img id="imagenCoche" src="IMAGENES/coche1.jpg" style="height:300px">
+<img id="imagenCoche" src="coche1.jpg" style="height:300px">
 
 <hr>
 
@@ -26,13 +26,13 @@
 <p>Selecciona una imagen de Spiderman:</p>
 
 <select id="selectSpiderman" onchange="cambiaSpiderman(this.value)">
-    <option value="IMAGENES/spiderman1.jpg">Spiderman 1</option>
-    <option value="IMAGENES/spiderman2.jpg">Spiderman 2</option>
-    <option value="IMAGENES/spiderman3.jpg">Spiderman 3</option>
+    <option value="spiderman1.jpg">Spiderman 1</option>
+    <option value="spiderman2.jpg">Spiderman 2</option>
+    <option value="spiderman3.jpg">Spiderman 3</option>
 </select>
 
 <br><br>
-<img id="imagenSpiderman" src="IMAGENES/spiderman1.jpg" style="height:300px">
+<img id="imagenSpiderman" src="spiderman1.jpg" style="height:300px">
 
 <hr>
 
