--- a/WEB VOLBEAT/live.html
+++ b/WEB VOLBEAT/live.html
@@ -1,1 +1,130 @@
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Volbeat Fan — Directo</title>
 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+
+<!-- NAVBAR -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">Volbeat Fan</a>
+
+    <button class="navbar-toggler" type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navMain">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navMain">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li>
+        <li class="nav-item"><a class="nav-link" href="discography.html">Discografía</a></li>
+        <li class="nav-item"><a class="nav-link active" href="live.html">Directo</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!-- CONTENIDO -->
+<main class="container my-5">
+
+  <h1 class="mb-3">Volbeat en Directo</h1>
+  <p class="lead">
+    Los conciertos de Volbeat son conocidos por su enorme energía,
+    mezcla de heavy metal, rockabilly y rock & roll.
+  </p>
+
+  <!-- SHOWS DESTACADOS -->
+  <section class="mb-5">
+    <h3>Shows destacados</h3>
+
+    <div class="row g-4">
+
+      <div class="col-md-6 col-lg-4">
+        <div class="card h-100">
+          <img src="assets/img/live1.jpg" class="card-img-top" alt="Concierto">
+          <div class="card-body">
+            <h5 class="card-title">Wacken Open Air</h5>
+            <p class="card-text">Uno de los festivales más importantes del metal.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-lg-4">
+        <div class="card h-100">
+          <img src="assets/img/live2.jpg" class="card-img-top" alt="Escenario">
+          <div class="card-body">
+            <h5 class="card-title">Gira Europea</h5>
+            <p class="card-text">Escenarios llenos y gran interacción con el público.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-lg-4">
+        <div class="card h-100">
+          <img src="assets/img/live3.jpg" class="card-img-top" alt="Público">
+          <div class="card-body">
+            <h5 class="card-title">Show en estadio</h5>
+            <p class="card-text">Producción masiva con luces y efectos.</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- GALERÍA DE DIRECTO -->
+  <section>
+    <h3>Momentos en vivo</h3>
+
+    <div class="row g-3">
+
+      <div class="col-6 col-md-4">
+        <img src="assets/img/live4.jpg" class="img-fluid rounded" alt="">
+      </div>
+
+      <div class="col-6 col-md-4">
+        <img src="assets/img/live5.jpg" class="img-fluid rounded" alt="">
+      </div>
+
+      <div class="col-6 col-md-4">
+        <img src="assets/img/live6.jpg" class="img-fluid rounded" alt="">
+      </div>
+
+      <div class="col-6 col-md-4">
+        <img src="assets/img/live7.jpg" class="img-fluid rounded" alt="">
+      </div>
+
+      <div class="col-6 col-md-4">
+        <img src="assets/img/live8.jpg" class="img-fluid rounded" alt="">
+      </div>
+
+      <div class="col-6 col-md-4">
+        <img src="assets/img/live9.jpg" class="img-fluid rounded" alt="">
+      </div>
+
+    </div>
+  </section>
+
+</main>
+
+<!-- FOOTER -->
+<footer class="bg-dark text-light py-3">
+  <div class="container text-center">
+    <small>Fan site — contenido no oficial.</small>
+  </div>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+</body>
+</html>
