--- a/WEB VOLBEAT/live.html
+++ b/WEB VOLBEAT/live.html
@@ -51,7 +51,7 @@
 
       <div class="col-md-6 col-lg-4">
         <div class="card h-100">
-          <img src="assets/img/live1.jpg" class="card-img-top" alt="Concierto">
+          <img src="ASSETS/IMAGENES/live1.jpg" class="card-img-top" alt="Concierto">
           <div class="card-body">
             <h5 class="card-title">Wacken Open Air</h5>
             <p class="card-text">Uno de los festivales más importantes del metal.</p>
@@ -61,7 +61,7 @@
 
       <div class="col-md-6 col-lg-4">
         <div class="card h-100">
-          <img src="assets/img/live2.jpg" class="card-img-top" alt="Escenario">
+          <img src="ASSETS/IMAGENES/live2.jpg" class="card-img-top" alt="Escenario">
           <div class="card-body">
             <h5 class="card-title">Gira Europea</h5>
             <p class="card-text">Escenarios llenos y gran interacción con el público.</p>
@@ -71,7 +71,7 @@
 
       <div class="col-md-6 col-lg-4">
         <div class="card h-100">
-          <img src="assets/img/live3.jpg" class="card-img-top" alt="Público">
+          <img src="ASSETS/IMAGENES/live3.jpg" class="card-img-top" alt="Público">
           <div class="card-body">
             <h5 class="card-title">Show en estadio</h5>
             <p class="card-text">Producción masiva con luces y efectos.</p>
@@ -89,27 +89,27 @@
     <div class="row g-3">
 
       <div class="col-6 col-md-4">
-        <img src="assets/img/live4.jpg" class="img-fluid rounded" alt="">
+        <img src="ASSETS/IMAGENES/live4.jpg" class="img-fluid rounded" alt="">
       </div>
 
       <div class="col-6 col-md-4">
-        <img src="assets/img/live5.jpg" class="img-fluid rounded" alt="">
+        <img src="ASSETS/IMAGENES/live5.jpg" class="img-fluid rounded" alt="">
       </div>
 
       <div class="col-6 col-md-4">
-        <img src="assets/img/live6.jpg" class="img-fluid rounded" alt="">
+        <img src="ASSETS/IMAGENES/live6.jpg" class="img-fluid rounded" alt="">
       </div>
 
       <div class="col-6 col-md-4">
-        <img src="assets/img/live7.jpg" class="img-fluid rounded" alt="">
+        <img src="ASSETS/IMAGENES/live7.jpg" class="img-fluid rounded" alt="">
       </div>
 
       <div class="col-6 col-md-4">
-        <img src="assets/img/live8.jpg" class="img-fluid rounded" alt="">
+        <img src="ASSETS/IMAGENES/live8.jpg" class="img-fluid rounded" alt="">
       </div>
 
       <div class="col-6 col-md-4">
-        <img src="assets/img/live9.jpg" class="img-fluid rounded" alt="">
+        <img src="ASSETS/IMAGENES/live9.jpg" class="img-fluid rounded" alt="">
       </div>
 
     </div>
