--- a/WEB VOLBEAT/index.html
+++ b/WEB VOLBEAT/index.html
@@ -1,1 +1,126 @@
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Volbeat Fan — Inicio</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Volbeat Fan</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMain" aria-controls="navMain" aria-expanded="false" aria-label="Alternar navegación">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navMain">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li>
+          <li class="nav-item"><a class="nav-link" href="discography.html">Discografía</a></li>
+          <li class="nav-item"><a class="nav-link" href="gallery.html">Galería</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
+  <!-- Carrusel -->
+  <div id="volCarousel" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="ASSETS/IMAGENES/carousel1.jpg" class="d-block w-100" alt="Volbeat en directo">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Volbeat en directo</h5>
+          <p>La energía del directo.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="ASSETS/IMAGENES/carousel2.jpg" class="d-block w-100" alt="Publico">
+      </div>
+      <div class="carousel-item">
+        <img src="ASSETS/IMAGENES/carousel3.jpg" class="d-block w-100" alt="Escena">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#volCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Anterior</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#volCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Siguiente</span>
+    </button>
+  </div>
+
+  <main class="container my-5">
+    <div class="row">
+      <section class="col-lg-8">
+        <h1 class="mb-3">Bienvenido a Volbeat Fan</h1>
+        <p class="lead">Página no oficial dedicada a noticias, discografía y galería de una de las bandas más potentes del rock moderno.</p>
+
+        <!-- Audio: placeholder (sube tu mp3 a assets/audio/) -->
+        <h3>Escucha (sample)</h3>
+        <audio controls>
+          <source src="assets/audio/sample-volbeat.mp3" type="audio/mpeg">
+          Tu navegador no soporta audio.
+        </audio>
+
+        <!-- Video: ejemplo embed YouTube (sustituye por el vídeo que prefieras) -->
+        <h3 class="mt-4">Video destacado</h3>
+        <div class="ratio ratio-16x9">
+          <iframe src="https://www.youtube.com/embed/VIDEO_ID" title="Volbeat live" allowfullscreen></iframe>
+        </div>
+      </section>
+
+      <aside class="col-lg-4">
+        <h4>Datos rápidos</h4>
+        <table class="table table-striped">
+          <thead><tr><th>Año</th><th>Hito</th></tr></thead>
+          <tbody>
+            <tr><td>2001</td><td>Formación</td></tr>
+            <tr><td>2005</td><td>Primer álbum</td></tr>
+            <tr><td>2025</td><td>Gira mundial</td></tr>
+          </tbody>
+        </table>
+      </aside>
+    </div>
+
+    <section class="mt-5">
+      <h3>Suscríbete</h3>
+      <form class="row g-3 needs-validation" novalidate>
+        <div class="col-md-6">
+          <label for="name" class="form-label">Nombre</label>
+          <input id="name" class="form-control" required>
+          <div class="invalid-feedback">Introduce tu nombre.</div>
+        </div>
+        <div class="col-md-6">
+          <label for="email" class="form-label">Email</label>
+          <input id="email" type="email" class="form-control" required>
+          <div class="invalid-feedback">Email válido requerido.</div>
+        </div>
+        <div class="col-12">
+          <button class="btn btn-primary" type="submit">Suscribirse</button>
+        </div>
+      </form>
+    </section>
+  </main>
+
+  <footer class="bg-dark text-light py-3">
+    <div class="container text-center">
+      <small>Fan site — contenido no oficial.</small>
+    </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    (function(){ 'use strict';
+      var forms = document.querySelectorAll('.needs-validation');
+      Array.prototype.slice.call(forms).forEach(function(form){
+        form.addEventListener('submit', function(e){
+          if (!form.checkValidity()) { e.preventDefault(); e.stopPropagation(); }
+          form.classList.add('was-validated');
+        }, false);
+      });
+    })();
+  </script>
+</body>
+</html>
