--- a/WEB VOLBEAT/about.html
+++ b/WEB VOLBEAT/about.html
@@ -1,1 +1,45 @@
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Sobre Volbeat</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+  <!-- reuse the same navbar as index (puedes copiar/pegar) -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Volbeat Fan</a>
+      <button class="navbar-toggler" ...></button>
+      <div class="collapse navbar-collapse" id="navMain">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link active" href="about.html">Sobre</a></li>
+          <li class="nav-item"><a class="nav-link" href="discography.html">Discografía</a></li>
+          <li class="nav-item"><a class="nav-link" href="gallery.html">Galería</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
+  <main class="container my-5">
+    <h1>Historia y miembros</h1>
+    <p>Volbeat es una banda originaria de Dinamarca, conocida por fusionar elementos de heavy metal, rockabilly y rock & roll. Sus conciertos son intensos y con gran presencia escénica.</p>
+
+    <h3>Miembros destacados</h3>
+    <ul>
+      <li>Michael Poulsen — voz y guitarra</li>
+      <li>Jon Larsen — batería</li>
+      <li>...otros miembros históricos...</li>
+    </ul>
+
+    <p>Para datos detallados y discografía completa consulta fuentes oficiales y artículos especializados.</p>
+  </main>
+
+  <footer class="bg-light py-3 text-center">Fan site — no oficial</footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
