Add discography page with album details

--- a/WEB VOLBEAT/discography.html
+++ b/WEB VOLBEAT/discography.html
@@ -1,1 +1,39 @@
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Discografía</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+  <!-- Navbar (igual que en index) -->
+  <main class="container my-5">
+    <h1>Álbumes seleccionados</h1>
 
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <img src="ASSETS/IMAGENES/album1.jpg" class="card-img-top" alt=" Álbum 1 ">
+          <div class="card-body">
+            <h5 class="card-title">Nombre del Álbum</h5>
+            <p class="card-text">Año • Canciones clave: "Still Counting", "Lola Montez"</p>
+          </div>
+        </div>
+      </div>
+      <!-- duplica cards según necesites -->
+    </div>
+
+    <h3 class="mt-4">Canciones destacadas</h3>
+    <ol>
+      <li>Still Counting</li>
+      <li>Lola Montez</li>
+      <li>Heaven Nor Hell</li>
+    </ol>
+  </main>
+
+  <footer class="bg-dark text-light py-3 text-center">Fan site — contenido no oficial</footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
