--- a/WEB VOLBEAT/contact.html
+++ b/WEB VOLBEAT/contact.html
@@ -1,1 +1,25 @@
-
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Contacto</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+  <!-- Navbar -->
+  <main class="container my-5">
+    <h1>Contacto</h1>
+    <p>Formulario de contacto (no operativo, sirve para la práctica).</p>
+    <form class="row g-3 needs-validation" novalidate>
+      <div class="col-md-6"><label class="form-label">Nombre</label><input class="form-control" required></div>
+      <div class="col-md-6"><label class="form-label">Email</label><input type="email" class="form-control" required></div>
+      <div class="col-12"><label class="form-label">Mensaje</label><textarea class="form-control" rows="4"></textarea></div>
+      <div class="col-12"><button class="btn btn-primary" type="submit">Enviar</button></div>
+    </form>
+  </main>
+  <footer class="bg-dark text-light py-3 text-center">Fan site</footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
