--- a/WEB VOLBEAT/index.html
+++ b/WEB VOLBEAT/index.html
@@ -17,9 +17,9 @@
       <div class="collapse navbar-collapse" id="navMain">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="discography.html">Discografía</a></li>
-          <li class="nav-item"><a class="nav-link" href="gallery.html">Galería</a></li>
+          <li class="nav-item"><a class="nav-link" href="gallery.html">En vivo!</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
         </ul>
       </div>
@@ -30,17 +30,21 @@
   <div id="volCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="ASSETS/IMAGENES/carousel1.jpg" class="d-block w-100" alt="Volbeat en directo">
+        <img src="ASSETS/IMAGENES/carousel1.jpg" class="d-block w-100" alt="Actual Volbeat">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Volbeat en directo</h5>
-          <p>La energía del directo.</p>
+           <h5>Alineación de Volbeat 2025</h5>
+          <p>Imagen del último álbum, God Of Angels Trust</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="ASSETS/IMAGENES/carousel2.jpg" class="d-block w-100" alt="Publico">
+        <img src="ASSETS/IMAGENES/carousel2.jpg" class="d-block w-100" alt="Old volbeat">
+       <h5>Alineación de Volbeat 2005</h5>
+          <p>Imagen del primer álbum, The Strength/The Sound/The Songs</p>
       </div>
       <div class="carousel-item">
-        <img src="ASSETS/IMAGENES/carousel3.jpg" class="d-block w-100" alt="Escena">
+        <img src="ASSETS/IMAGENES/carousel3.jpg" class="d-block w-100" alt="Logo">
+        <h5>Logo de volbeat</h5>
+        <p>Volbeat Denmark 2001</p>
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#volCarousel" data-bs-slide="prev">
