Add caption to carousel item for Volbeat 2005
Added a carousel caption for the 2005 Volbeat lineup.

--- a/WEB VOLBEAT/index.html
+++ b/WEB VOLBEAT/index.html
@@ -38,8 +38,10 @@
       </div>
       <div class="carousel-item">
         <img src="ASSETS/IMAGENES/carousel2.jpg" class="d-block w-100" alt="Old volbeat">
+         <div class="carousel-caption d-none d-md-block">
        <h5>Alineación de Volbeat 2005</h5>
           <p>Imagen del primer álbum, The Strength/The Sound/The Songs</p>
+         </div>
       </div>
       <div class="carousel-item">
         <img src="ASSETS/IMAGENES/carousel3.jpg" class="d-block w-100" alt="Logo">
