--- a/WEB VOLBEAT/index.html
+++ b/WEB VOLBEAT/index.html
@@ -19,7 +19,7 @@
           <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="discography.html">Discografía</a></li>
-          <li class="nav-item"><a class="nav-link" href="gallery.html">En vivo!</a></li>
+          <li class="nav-item"><a class="nav-link" href="live.html">En vivo!</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
         </ul>
       </div>
