Update carousel items to set active class

--- a/WEB VOLBEAT/index.html
+++ b/WEB VOLBEAT/index.html
@@ -36,14 +36,14 @@
           <p>Imagen del último álbum, God Of Angels Trust</p>
         </div>
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item active">
         <img src="ASSETS/IMAGENES/carousel2.jpg" class="d-block w-100" alt="Old volbeat">
          <div class="carousel-caption d-none d-md-block">
        <h5>Alineación de Volbeat 2005</h5>
           <p>Imagen del primer álbum, The Strength/The Sound/The Songs</p>
          </div>
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item active">
         <img src="ASSETS/IMAGENES/carousel3.jpg" class="d-block w-100" alt="Logo">
         <h5>Logo de volbeat</h5>
         <p>Volbeat Denmark 2001</p>
