--- a/WEB VOLBEAT/index.html
+++ b/WEB VOLBEAT/index.html
@@ -27,36 +27,48 @@
   </nav>
 
   <!-- Carrusel -->
-  <div id="volCarousel" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="ASSETS/IMAGENES/carousel1.jpg" class="d-block w-100" alt="Actual Volbeat">
-        <div class="carousel-caption d-none d-md-block">
-           <h5>Alineación de Volbeat 2025</h5>
-          <p>Imagen del último álbum, God Of Angels Trust</p>
-        </div>
-      </div>
-      <div class="carousel-item active">
-        <img src="ASSETS/IMAGENES/carousel2.jpg" class="d-block w-100" alt="Old volbeat">
-         <div class="carousel-caption d-none d-md-block">
-       <h5>Alineación de Volbeat 2005</h5>
-          <p>Imagen del primer álbum, The Strength/The Sound/The Songs</p>
-         </div>
-      </div>
-      <div class="carousel-item active">
-        <img src="ASSETS/IMAGENES/carousel3.jpg" class="d-block w-100" alt="Logo">
-        <h5>Logo de volbeat</h5>
-        <p>Volbeat Denmark 2001</p>
+ <div id="volCarousel" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+
+    <!-- Slide 1 -->
+    <div class="carousel-item active">
+      <img src="ASSETS/IMAGENES/carousel1.jpg" class="d-block w-100" alt="Actual Volbeat">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Alineación de Volbeat 2025</h5>
+        <p>Imagen del último álbum, God Of Angels Trust</p>
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#volCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Anterior</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#volCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Siguiente</span>
-    </button>
+
+    <!-- Slide 2 -->
+    <div class="carousel-item">
+      <img src="ASSETS/IMAGENES/carousel2.jpg" class="d-block w-100" alt="Old Volbeat">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Alineación de Volbeat 2005</h5>
+        <p>Imagen del primer álbum, The Strength/The Sound/The Songs</p>
+      </div>
+    </div>
+
+    <!-- Slide 3 -->
+    <div class="carousel-item">
+      <img src="ASSETS/IMAGENES/carousel3.jpg" class="d-block w-100" alt="Logo">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Logo de Volbeat</h5>
+        <p>Volbeat — Denmark 2001</p>
+      </div>
+    </div>
+
   </div>
 
+  <button class="carousel-control-prev" type="button" data-bs-target="#volCarousel" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+    <span class="visually-hidden">Anterior</span>
+  </button>
+
+  <button class="carousel-control-next" type="button" data-bs-target="#volCarousel" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+    <span class="visually-hidden">Siguiente</span>
+  </button>
+</div>
   <main class="container my-5">
     <div class="row">
       <section class="col-lg-8">
