--- a/WEB VOLBEAT/index.html
+++ b/WEB VOLBEAT/index.html
@@ -78,14 +78,14 @@
         <!-- Audio: placeholder (sube tu mp3 a assets/audio/) -->
         <h3>Escucha (sample)</h3>
         <audio controls>
-          <source src="assets/audio/sample-volbeat.mp3" type="audio/mpeg">
+          <source src="ASSETS/AUDIO/sample-volbeat.mp3" type="audio/mpeg">
           Tu navegador no soporta audio.
         </audio>
 
         <!-- Video: ejemplo embed YouTube (sustituye por el vídeo que prefieras) -->
         <h3 class="mt-4">Video destacado</h3>
         <div class="ratio ratio-16x9">
-          <iframe src="https://www.youtube.com/embed/VIDEO_ID" title="Volbeat live" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/watch?v=siIaaBIVbZE&list=PL9tY0BWXOZFvLxZGG6Z7yhjgTk_BqqBcp&index=15" title="Volbeat - Lweviathan" allowfullscreen></iframe>
         </div>
       </section>
 
