--- a/WEB VOLBEAT/index.html
+++ b/WEB VOLBEAT/index.html
@@ -76,7 +76,7 @@
         <p class="lead">Página no oficial dedicada a noticias, discografía y galería de una de las bandas más potentes del rock moderno.</p>
 
         <!-- Audio: placeholder (sube tu mp3 a assets/audio/) -->
-        <h3>Escucha (sample)</h3>
+        <h3>Escucha (Devils Are Awake)</h3>
         <audio controls>
           <source src="ASSETS/AUDIO/sample-volbeat.mp3" type="audio/mpeg">
           Tu navegador no soporta audio.
@@ -94,9 +94,19 @@
         <table class="table table-striped">
           <thead><tr><th>Año</th><th>Hito</th></tr></thead>
           <tbody>
-            <tr><td>2001</td><td>Formación</td></tr>
-            <tr><td>2005</td><td>Primer álbum</td></tr>
-            <tr><td>2025</td><td>Gira mundial</td></tr>
+            <tr><td>2001</td><td>Formación de la banda por Michael Poulsen tras la disolución de Dominus</td></tr>
+<tr><td>2002</td><td>Se consolida la primera alineación estable</td></tr>
+<tr><td>2005</td><td>Lanzamiento del álbum debut "The Strength / The Sound / The Songs"</td></tr>
+<tr><td>2007</td><td>Lanzamiento del álbum "Rock the Rebel / Metal the Devil"</td></tr>
+<tr><td>2008</td><td>Salida del guitarrista Franz “Hellboss” Gottschalk</td></tr>
+<tr><td>2010</td><td>Lanzamiento del álbum "Beyond Hell / Above Heaven"</td></tr>
+<tr><td>2011</td><td>Entrada del guitarrista Rob Caggiano (ex-Anthrax)</td></tr>
+<tr><td>2013</td><td>Lanzamiento del álbum "Outlaw Gentlemen & Shady Ladies"</td></tr>
+<tr><td>2016</td><td>Lanzamiento del álbum "Seal the Deal & Let's Boogie"</td></tr>
+<tr><td>2019</td><td>Lanzamiento del álbum "Rewind, Replay, Rebound"</td></tr>
+<tr><td>2023</td><td>Salida del guitarrista Rob Caggiano tras más de una década</td></tr>
+<tr><td>2025</td><td>Nueva alineación y lanzamiento del álbum "God Of Angels Trust"</td></tr>
+<tr><td>2025</td><td>Inicio de nueva gira mundial con la formación actual</td></tr>
           </tbody>
         </table>
       </aside>
