Change section title from 'Datos rápidos' to 'Cronología'

--- a/WEB VOLBEAT/index.html
+++ b/WEB VOLBEAT/index.html
@@ -90,9 +90,9 @@
       </section>
 
       <aside class="col-lg-4">
-        <h4>Datos rápidos</h4>
+        <h4>Cronología</h4>
         <table class="table table-striped">
-          <thead><tr><th>Año</th><th>Hito</th></tr></thead>
+          <thead><tr><th>Año</th>/tr></thead>
           <tbody>
             <tr><td>2001</td><td>Formación de la banda por Michael Poulsen tras la disolución de Dominus</td></tr>
 <tr><td>2002</td><td>Se consolida la primera alineación estable</td></tr>
