Update historical events for Volbeat in index.html

--- a/WEB VOLBEAT/index.html
+++ b/WEB VOLBEAT/index.html
@@ -96,17 +96,17 @@
           <tbody>
             <tr><td>2001</td><td>Formación de la banda por Michael Poulsen tras la disolución de Dominus</td></tr>
 <tr><td>2002</td><td>Se consolida la primera alineación estable</td></tr>
-<tr><td>2005</td><td>Lanzamiento del álbum debut "The Strength / The Sound / The Songs"</td></tr>
-<tr><td>2007</td><td>Lanzamiento del álbum "Rock the Rebel / Metal the Devil"</td></tr>
-<tr><td>2008</td><td>Salida del guitarrista Franz “Hellboss” Gottschalk</td></tr>
-<tr><td>2010</td><td>Lanzamiento del álbum "Beyond Hell / Above Heaven"</td></tr>
-<tr><td>2011</td><td>Entrada del guitarrista Rob Caggiano (ex-Anthrax)</td></tr>
+<tr><td>2005</td><td>Lanzamiento del álbum debut "The Strength/The Sound/The Songs"</td></tr>
+<tr><td>2007</td><td>Lanzamiento del álbum "Rock the Rebel/Metal the Devil"</td></tr>
+<tr><td>2008</td><td>Salida del guitarrista Franz Gottschalk</td></tr>
+<tr><td>2010</td><td>Lanzamiento del álbum "Beyond Hell/Above Heaven"</td></tr>
+<tr><td>2011</td><td>Entrada del guitarrista Rob Caggiano</td></tr>
 <tr><td>2013</td><td>Lanzamiento del álbum "Outlaw Gentlemen & Shady Ladies"</td></tr>
 <tr><td>2016</td><td>Lanzamiento del álbum "Seal the Deal & Let's Boogie"</td></tr>
 <tr><td>2019</td><td>Lanzamiento del álbum "Rewind, Replay, Rebound"</td></tr>
 <tr><td>2023</td><td>Salida del guitarrista Rob Caggiano tras más de una década</td></tr>
-<tr><td>2025</td><td>Nueva alineación y lanzamiento del álbum "God Of Angels Trust"</td></tr>
-<tr><td>2025</td><td>Inicio de nueva gira mundial con la formación actual</td></tr>
+<tr><td>2025</td><td>Nueva alineación con Flemming C. Lund, y lanzamiento del álbum "God Of Angels Trust"</td></tr>
+<tr><td>2025</td><td>Inicio de una nueva gira mundial con la formación actual</td></tr>
           </tbody>
         </table>
       </aside>
