--- a/WEB VOLBEAT/index.html
+++ b/WEB VOLBEAT/index.html
@@ -134,7 +134,7 @@
 
   <footer class="bg-dark text-light py-3">
     <div class="container text-center">
-      <small>Fan site — contenido no oficial.</small>
+      <small>Página no oficial — José Manuel Moreno Raya</small>
     </div>
   </footer>
 
