--- a/WEB VOLBEAT/about.html
+++ b/WEB VOLBEAT/about.html
@@ -16,9 +16,9 @@
       <div class="collapse navbar-collapse" id="navMain">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link active" href="about.html">Sobre</a></li>
+          <li class="nav-item"><a class="nav-link active" href="about.html">Sobre Volbeat</a></li>
           <li class="nav-item"><a class="nav-link" href="discography.html">Discografía</a></li>
-          <li class="nav-item"><a class="nav-link" href="gallery.html">Galería</a></li>
+          <li class="nav-item"><a class="nav-link" href="live.html">En vivo!</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
         </ul>
       </div>
