Change 'About' link text to 'Sobre volbeat'

--- a/WEB VOLBEAT/index.html
+++ b/WEB VOLBEAT/index.html
@@ -17,7 +17,7 @@
       <div class="collapse navbar-collapse" id="navMain">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">Sobre volbeat</a></li>
           <li class="nav-item"><a class="nav-link" href="discography.html">Discografía</a></li>
           <li class="nav-item"><a class="nav-link" href="live.html">En vivo!</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
