--- a/WEB VOLBEAT/discography.html
+++ b/WEB VOLBEAT/discography.html
@@ -31,6 +31,49 @@
       <li>Lola Montez</li>
       <li>Heaven Nor Hell</li>
     </ol>
+
+
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <img src="ASSETS/IMAGENES/album2.jpg" class="card-img-top" alt=" Álbum 1 ">
+          <div class="card-body">
+            <h5 class="card-title">Nombre del Álbum</h5>
+            <p class="card-text">Año • Canciones clave: "Still Counting", "Lola Montez"</p>
+          </div>
+        </div>
+      </div>
+      <!-- duplica cards según necesites -->
+    </div>
+
+    <h3 class="mt-4">Canciones destacadas</h3>
+    <ol>
+      <li>Still Counting</li>
+      <li>Lola Montez</li>
+      <li>Heaven Nor Hell</li>
+    </ol>
+
+<div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <img src="ASSETS/IMAGENES/album3.jpg" class="card-img-top" alt=" Álbum 1 ">
+          <div class="card-body">
+            <h5 class="card-title">Nombre del Álbum</h5>
+            <p class="card-text">Año • Canciones clave: "Still Counting", "Lola Montez"</p>
+          </div>
+        </div>
+      </div>
+      <!-- duplica cards según necesites -->
+    </div>
+
+    <h3 class="mt-4">Canciones destacadas</h3>
+    <ol>
+      <li>Still Counting</li>
+      <li>Lola Montez</li>
+      <li>Heaven Nor Hell</li>
+    </ol>
+
+    
   </main>
 
   <footer class="bg-dark text-light py-3 text-center">Fan site — contenido no oficial</footer>
