--- a/WEB VOLBEAT/discography.html
+++ b/WEB VOLBEAT/discography.html
@@ -17,12 +17,11 @@
         <div class="card h-100">
           <img src="ASSETS/IMAGENES/album1.jpg" class="card-img-top" alt=" Álbum 1 ">
           <div class="card-body">
-            <h5 class="card-title">Nombre del Álbum</h5>
-            <p class="card-text">Año • Canciones clave: "Still Counting", "Lola Montez"</p>
+            <h5 class="card-title">Rewind, Replay, Rebound (Live in Deutschland)</h5>
+            <p class="card-text">2020</p>
           </div>
         </div>
       </div>
-      <!-- duplica cards según necesites -->
     </div>
 
     <h3 class="mt-4">Canciones destacadas</h3>
@@ -36,27 +35,26 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="ASSETS/IMAGENES/album2.jpg" class="card-img-top" alt=" Álbum 1 ">
+          <img src="ASSETS/IMAGENES/album3.jpg" class="card-img-top" alt=" Álbum 1 ">
           <div class="card-body">
-            <h5 class="card-title">Nombre del Álbum</h5>
-            <p class="card-text">Año • Canciones clave: "Still Counting", "Lola Montez"</p>
+            <h5 class="card-title">Outlaw Gentlemen & Shady Ladies</h5>
+            <p class="card-text">2013</p>
           </div>
         </div>
       </div>
-      <!-- duplica cards según necesites -->
     </div>
 
     <h3 class="mt-4">Canciones destacadas</h3>
     <ol>
-      <li>Still Counting</li>
+      <li>Doc Holliday</li>
       <li>Lola Montez</li>
-      <li>Heaven Nor Hell</li>
+      <li>Lonesome Rider</li>
     </ol>
 
 <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="ASSETS/IMAGENES/album3.jpg" class="card-img-top" alt=" Álbum 1 ">
+          <img src="ASSETS/IMAGENES/album2.jpg" class="card-img-top" alt=" Álbum 1 ">
           <div class="card-body">
             <h5 class="card-title">Nombre del Álbum</h5>
             <p class="card-text">Año • Canciones clave: "Still Counting", "Lola Montez"</p>
