--- a/WEB VOLBEAT/discography.html
+++ b/WEB VOLBEAT/discography.html
@@ -26,12 +26,12 @@
 
     <h3 class="mt-4">Canciones destacadas</h3>
     <ol>
-      <li>Still Counting</li>
-      <li>Lola Montez</li>
-      <li>Heaven Nor Hell</li>
+      <li>The Devil’s Bleeding Crown</li>
+      <li>Sad Man's Tongue</li>
+       <li>Still Counting</li>
     </ol>
-
-
+  <p><br></p>
+<p><br></p>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
@@ -50,14 +50,15 @@
       <li>Lola Montez</li>
       <li>Lonesome Rider</li>
     </ol>
-
+<p><br></p>
+    <p><br></p>
 <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
           <img src="ASSETS/IMAGENES/album2.jpg" class="card-img-top" alt=" Álbum 1 ">
           <div class="card-body">
-            <h5 class="card-title">Nombre del Álbum</h5>
-            <p class="card-text">Año • Canciones clave: "Still Counting", "Lola Montez"</p>
+            <h5 class="card-title">God Of Angels Trust</h5>
+            <p class="card-text">2025</p>
           </div>
         </div>
       </div>
@@ -66,9 +67,9 @@
 
     <h3 class="mt-4">Canciones destacadas</h3>
     <ol>
-      <li>Still Counting</li>
-      <li>Lola Montez</li>
-      <li>Heaven Nor Hell</li>
+      <li>By a Monster’s Hand</li>
+      <li>In the Barn of the Goat Giving Birth to Satan’s Spawn in a Dying World of Doom</li>
+      <li>Time Will Heal</li>
     </ol>
 
     
