--- a/WEB VOLBEAT/about.html
+++ b/WEB VOLBEAT/about.html
@@ -39,7 +39,7 @@
     <p>Para datos detallados y discografía completa consulta fuentes oficiales y artículos especializados.</p>
   </main>
 
-  <footer class="bg-light py-3 text-center">Fan site — no oficial</footer>
+  <footer class="bg-light py-3 text-center">Página no oficial — José Manuel Moreno Raya</footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
