--- a/WEB VOLBEAT/contact.html
+++ b/WEB VOLBEAT/contact.html
@@ -19,7 +19,7 @@
       <div class="col-12"><button class="btn btn-primary" type="submit">Enviar</button></div>
     </form>
   </main>
-  <footer class="bg-dark text-light py-3 text-center">Fan site</footer>
+  <footer class="bg-dark text-light py-3 text-center">Página no oficial — José Manuel Moreno Raya</footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
