--- a/WEB VOLBEAT/discography.html
+++ b/WEB VOLBEAT/discography.html
@@ -74,7 +74,7 @@
     
   </main>
 
-  <footer class="bg-dark text-light py-3 text-center">Fan site — contenido no oficial</footer>
+  <footer class="bg-dark text-light py-3 text-center">Página no oficial — José Manuel Moreno Raya</footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
