--- a/WEB VOLBEAT/about.html
+++ b/WEB VOLBEAT/about.html
@@ -26,7 +26,7 @@
   </nav>
 
   <main class="container my-5">
-    <h1>Historia y miembros</h1>
+    <h1>Quiénes son</h1>
     <p>Volbeat es una banda originaria de Dinamarca, conocida por fusionar elementos de heavy metal, rockabilly y rock & roll. Sus conciertos son intensos y con gran presencia escénica.</p>
 
     <h3>Miembros destacados</h3>
@@ -36,6 +36,15 @@
       <li>...otros miembros históricos...</li>
     </ul>
 
+<h3>Historia de sus canciones</h3>
+    <ul>
+      <li>Fallen — La canción fue dedicada al padre fallecido del vocalista Michael Poulsen</li>
+      <li>Mary Jane Kelly — Se cree que Mary Jane Kelly fue la última víctima del infame "Jack el Destripador". Su cuerpo fue descubierto el 9 de noviembre de 1888 por Thomas Bowyer, quien trabajaba para el casero de Mary</li>
+      <li>Light a Way — Esta canción trata sobre un niño huérfano que fue separado de su madre y de su hogar a la fuerza. La llevaron como esclava y su hijo comenzó a caminar por el camino entre los campos de maíz, implorando la ayuda del Señor. Un día, conoce a los Guitar Gangsters de otras canciones. Le dicen que intentarán encontrar a su madre y liberarla</li>
+    </ul>
+
+
+    
     <p>Para datos detallados y discografía completa consulta fuentes oficiales y artículos especializados.</p>
   </main>
 
