--- a/WEB VOLBEAT/contact.html
+++ b/WEB VOLBEAT/contact.html
@@ -8,6 +8,34 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
+
+<!-- NAVBAR -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">Volbeat Fan</a>
+
+    <button class="navbar-toggler" type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navMain">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navMain">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li>
+        <li class="nav-item"><a class="nav-link" href="discography.html">Discografía</a></li>
+        <li class="nav-item"><a class="nav-link active" href="live.html">En vivo!</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+
+  
   <!-- Navbar -->
   <main class="container my-5">
     <h1>Contacto</h1>
