--- a/WEB VOLBEAT/contact.html
+++ b/WEB VOLBEAT/contact.html
@@ -39,7 +39,7 @@
   <!-- Navbar -->
   <main class="container my-5">
     <h1>Contacto</h1>
-    <p>Formulario de contacto (no operativo, sirve para la práctica).</p>
+    <p>Formulario de contacto</p>
     <form class="row g-3 needs-validation" novalidate>
       <div class="col-md-6"><label class="form-label">Nombre</label><input class="form-control" required></div>
       <div class="col-md-6"><label class="form-label">Email</label><input type="email" class="form-control" required></div>
