--- a/WEB VOLBEAT/about.html
+++ b/WEB VOLBEAT/about.html
@@ -27,7 +27,11 @@
 
   <main class="container my-5">
     <h1>Quiénes son</h1>
-    <p>Volbeat es una banda originaria de Dinamarca, conocida por fusionar elementos de heavy metal, rockabilly y rock & roll. Sus conciertos son intensos y con gran presencia escénica.</p>
+    <p>Volbeat es una banda de rock y metal originaria de Dinamarca que ha conseguido un sonido propio y fácilmente reconocible al combinar heavy metal, hard rock, rockabilly y rock & roll clásico. Fundada en 2001 por el vocalista y guitarrista Michael Poulsen, la banda se ha convertido en uno de los grupos europeos más influyentes dentro del metal moderno, destacando por su capacidad para mezclar la contundencia del metal con melodías pegadizas y ritmos inspirados en el rock de los años 50.
+
+Sus canciones suelen alternar entre riffs pesados, estribillos muy coreables y una estética que evoca tanto el mundo del heavy metal como la cultura rockabilly. Además, muchas de sus letras incluyen referencias a la historia, el western, el horror clásico o experiencias personales, lo que refuerza su identidad única dentro del panorama musical.
+
+En directo, Volbeat es conocida por ofrecer espectáculos intensos, enérgicos y muy cercanos al público. Sus conciertos destacan por la potencia sonora, la interacción constante con los fans y una puesta en escena que transmite la esencia del rock más puro. Gracias a su estilo híbrido y a su fuerte presencia escénica, la banda ha logrado llenar grandes festivales y arenas en todo el mundo, consolidándose como una de las formaciones más importantes del rock y metal contemporáneo</p>
 
     <h3>Miembros destacados</h3>
     <ul>
