--- a/WEB VOLBEAT/about.html
+++ b/WEB VOLBEAT/about.html
@@ -33,11 +33,12 @@ Sus canciones suelen alternar entre riffs pesados, estribillos muy coreables y u
 
 En directo, Volbeat es conocida por ofrecer espectáculos intensos, enérgicos y muy cercanos al público. Sus conciertos destacan por la potencia sonora, la interacción constante con los fans y una puesta en escena que transmite la esencia del rock más puro. Gracias a su estilo híbrido y a su fuerte presencia escénica, la banda ha logrado llenar grandes festivales y arenas en todo el mundo, consolidándose como una de las formaciones más importantes del rock y metal contemporáneo</p>
 
-    <h3>Miembros destacados</h3>
+    <h3>Formación actual</h3>
     <ul>
-      <li>Michael Poulsen — voz y guitarra</li>
-      <li>Jon Larsen — batería</li>
-      <li>...otros miembros históricos...</li>
+      <li>Michael Poulsen — Voz principal y guitarra rítmica</li>
+      <li>Jon Larsen — Batería</li>
+      <li>Kaspar Boye Larsen — Bajo</li>
+     <li>Flemming C. Lund — Guitarra solista</li>
     </ul>
 
 <h3>Historia de sus canciones</h3>
