--- a/WEB VOLBEAT/live.html
+++ b/WEB VOLBEAT/live.html
@@ -25,7 +25,7 @@
     <div class="collapse navbar-collapse" id="navMain">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">Sobre Volbeat</a></li>
         <li class="nav-item"><a class="nav-link" href="discography.html">Discografía</a></li>
         <li class="nav-item"><a class="nav-link active" href="live.html">Directo</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
