--- a/WEB VOLBEAT/live.html
+++ b/WEB VOLBEAT/live.html
@@ -43,44 +43,7 @@
     mezcla de heavy metal, rockabilly y rock & roll.
   </p>
 
-  <!-- SHOWS DESTACADOS -->
-  <section class="mb-5">
-    <h3>Shows destacados</h3>
-
-    <div class="row g-4">
-
-      <div class="col-md-6 col-lg-4">
-        <div class="card h-100">
-          <img src="ASSETS/IMAGENES/live1.jpg" class="card-img-top" alt="Concierto">
-          <div class="card-body">
-            <h5 class="card-title">Wacken Open Air</h5>
-            <p class="card-text">Uno de los festivales más importantes del metal.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-6 col-lg-4">
-        <div class="card h-100">
-          <img src="ASSETS/IMAGENES/live2.jpg" class="card-img-top" alt="Escenario">
-          <div class="card-body">
-            <h5 class="card-title">Gira Europea</h5>
-            <p class="card-text">Escenarios llenos y gran interacción con el público.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-6 col-lg-4">
-        <div class="card h-100">
-          <img src="ASSETS/IMAGENES/live3.jpg" class="card-img-top" alt="Público">
-          <div class="card-body">
-            <h5 class="card-title">Show en estadio</h5>
-            <p class="card-text">Producción masiva con luces y efectos.</p>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </section>
+ 
 
   <!-- GALERÍA DE DIRECTO -->
   <section>
@@ -88,6 +51,18 @@
 
     <div class="row g-3">
 
+  <div class="col-6 col-md-4">
+        <img src="ASSETS/IMAGENES/live1.jpg" class="img-fluid rounded" alt="">
+      </div>
+
+      <div class="col-6 col-md-4">
+        <img src="ASSETS/IMAGENES/live2.jpg" class="img-fluid rounded" alt="">
+      </div>
+
+
+      <div class="col-6 col-md-4">
+        <img src="ASSETS/IMAGENES/live3.jpg" class="img-fluid rounded" alt="">
+      </div>
       <div class="col-6 col-md-4">
         <img src="ASSETS/IMAGENES/live4.jpg" class="img-fluid rounded" alt="">
       </div>
