--- a/WEB VOLBEAT/live.html
+++ b/WEB VOLBEAT/live.html
@@ -47,7 +47,7 @@
 
   <!-- GALERÍA DE DIRECTO -->
   <section>
-    <h3>Momentos en vivo</h3>
+    <h3>Galería de fotos</h3>
 
     <div class="row g-3">
 
